# django-crud

./: db.sqlite3  pyproject.toml  readme.md
crud/: models.py  tests.py  urls.py  views.py
crud/migrations/: 0001_initial.py
crud_project/: settings.py  urls.py
templates/: base.html  crud_create.html  crud_delete.html  crud_details.html  crud_update.html  home.html
